@@ -159,14 +159,38 @@ public class Day12 {
             return 1L;
         }
 
+        // look ahead - does not need to be recalculated...
+//        boolean seenDot = false;
+//        var ii = 0;
+//        for (int i = si; i < ll; i++) {
+//            if (!seenDot) {
+//                if (l.charAt(i) != '#') {
+//                    seenDot = true;
+//                }
+//            } else {
+//                if (l.charAt(i) == '#') {
+//                    ii++;
+//                    seenDot = false;
+//                }
+//            }
+//
+//            if (ii > rr - ri) {
+//                return 0L;
+//            }
+//        }
+
+
         final var c = l.charAt(si);
+        int si1 = si + 1;
         if (c == '.') {
-            return place(rem, ri, si + 1, l, ll, rr);
+            return place(rem, ri, si1, l, ll, rr);
         }
 
         var r = rem.get(ri);
 
-        if (si + r > ll) {
+        int i1 = si + r;
+
+        if (i1 > ll) {
             return 0L;
         }
 
@@ -182,16 +206,17 @@ public class Day12 {
 
         //        var res = 0L;
         if (canPlace) {
-            if (si + r == ll) {
-                return place(rem, ri + 1, si + r, l, ll, rr) + (mustPlace ? 0L : place(rem, ri, si + 1, l, ll, rr));
+            int ri1 = ri + 1;
+            if (i1 == ll) {
+                return place(rem, ri1, i1, l, ll, rr) + (mustPlace ? 0L : place(rem, ri, si1, l, ll, rr));
                 //                return place(rem, ri + 1, si + r, l);// + place(rem, ri, si + 1, l);
-            } else if (l.charAt(si + r) != '#') {
-                return place(rem, ri + 1, si + r + 1, l, ll, rr) + (mustPlace ? 0L : place(rem, ri, si + 1, l, ll, rr));
+            } else if (l.charAt(i1) != '#') {
+                return place(rem, ri1, si + r + 1, l, ll, rr) + (mustPlace ? 0L : place(rem, ri, si1, l, ll, rr));
                 //                return place(rem, ri + 1, si + r + 1, l) + place(rem, ri, si + 1, l);
             }
         }
 
-        return mustPlace ? 0L : place(rem, ri, si + 1, l, ll, rr);
+        return mustPlace ? 0L : place(rem, ri, si1, l, ll, rr);
 
         //        if (mustPlace) {
         //            return res;
@@ -204,8 +229,9 @@ public class Day12 {
         final var result = new AtomicLong(0L);
         final var done = new AtomicInteger(0);
 
-        var e = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors());
+        var e = Executors.newVirtualThreadPerTaskExecutor();
 
+        int ii = 0;
         for (var line : input) {
 
             var parts = line.split(" ");
@@ -227,14 +253,18 @@ public class Day12 {
             string += part;
 
             final var s = string;
+            final int iii = ii;
             e.execute(() -> {
+                var iiii = iii;
                 var start = System.currentTimeMillis();
                 var r = place(numbers, 0, 0, s, s.length(), numbers.size());
                 var i = done.incrementAndGet();
                 var l = result.addAndGet(r);
-                System.out.printf("%s of %s done (%s) %s%n", i, input.length, l,
+                System.out.printf("%s of %s done %s = %s (%s) %s%n", i, input.length, iiii, r, l,
                         (System.currentTimeMillis() - start) / (60 * 1000));
             });
+
+            ii++;
 
             //            System.out.println(r);
             //
